- fixed 'text-wrap' width in 'unassigned task' - styles updates on 'edit task' mock -changed global 'input:focus' -change sass 'variables' color -minor margin fix in 'unassigned task'

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,13 @@
     padding-top: 15px;
 }
 
+
+/* input focus */
+
+input:focus {
+    border: 1px solid #808080;
+}
+
 h1,
 h2,
 h3,
